--- a/config/config.json
+++ b/config/config.json
@@ -19,7 +19,40 @@
       ]
     }
   },
-  "externals": {},
+  "externals": {
+    "sp-init": {
+      "path": "https://tronoxglobal.sharepoint.com/_layouts/15/init.js",
+      "globalName": "$_global_init"
+    },
+    "microsoft-ajax": {
+      "path": "https://tronoxglobal.sharepoint.com/_layouts/15/MicrosoftAjax.js",
+      "globalName": "Sys",
+      "globalDependencies": [
+        "sp-init"
+      ]
+    },
+    "sp-runtime": {
+      "path": "https://tronoxglobal.sharepoint.com/_layouts/15/SP.Runtime.js",
+      "globalName": "SP",
+      "globalDependencies": [
+        "microsoft-ajax"
+      ]
+    },
+    "sharepoint": {
+      "path": "https://tronoxglobal.sharepoint.com/_layouts/15/SP.js",
+      "globalName": "SP",
+      "globalDependencies": [
+        "sp-runtime"
+      ]
+    },
+    "sp-workflow": {
+      "path": "https://tronoxglobal.sharepoint.com/_layouts/15/SP.WorkflowServices.js",
+      "globalName": "SP",
+      "globalDependencies": [
+        "sp-runtime"
+      ]
+    }
+  },
   "localizedResources": {
     "GrcTestWebPartStrings": "lib/webparts/grcTest/loc/{locale}.js",
     "GrcUploadWebPartStrings": "lib/webparts/grcUpload/loc/{locale}.js"
