--- a/src/webparts/grcUpload/GrcUploadWebPart.manifest.json
+++ b/src/webparts/grcUpload/GrcUploadWebPart.manifest.json
@@ -14,7 +14,7 @@
     {
       "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Other
       "group": {
-        "default": "Other"
+        "default": "GRC"
       },
       "title": {
         "default": "GRCUpload"
