--- a/src/webparts/grcAzureManagement/GrcAzureManagementWebPart.manifest.json
+++ b/src/webparts/grcAzureManagement/GrcAzureManagementWebPart.manifest.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://dev.office.com/json-schemas/spfx/client-side-web-part-manifest.schema.json",
-  "id": "22420ac0-d811-4aad-bc3a-e3cbe7a7ee1a",
-  "alias": "GrcTestWebPart",
+  "id": "e30095ac-6542-40dc-83c2-965680b847d3",
+  "alias": "GrcAzureManagementWebPart",
   "componentType": "WebPart",
 
   // The "*" signifies that the version should be taken from the package.json
@@ -15,14 +15,13 @@
 
   "preconfiguredEntries": [{
     "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Other
-    "group": { "default": "GRC" },
-    "title": { "default": "GRC Test" },
-    "description": { "default": "GRC Test description" },
+    "group": { "default": "Other" },
+    "title": { "default": "GRCAzureManagement" },
+    "description": { "default": "GRCAzureManagement description" },
     "officeFabricIconFontName": "Page",
     "properties": {
-      "primaryApproverListName":"Primary Approver",
-      "roleToTCodeReviewListName": "Role Review",
-      "roleToTransactionListName":"Role To Transaction",
+      "description": "GRCAzureManagement",
+      "storageAccountName": "a837d9a1b5cc343b99163634"
     }
   }]
 }
