--- a/src/webparts/mitigatingControlsSiteSetup/MitigatingControlsSiteSetupWebPart.manifest.json
+++ b/src/webparts/mitigatingControlsSiteSetup/MitigatingControlsSiteSetupWebPart.manifest.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://dev.office.com/json-schemas/spfx/client-side-web-part-manifest.schema.json",
-  "id": "22420ac0-d811-4aad-bc3a-e3cbe7a7ee1a",
-  "alias": "GrcTestWebPart",
+  "id": "bd115b49-28e9-4d79-86b5-150a37f53a95",
+  "alias": "MitigatingControlsSiteSetupWebPart",
   "componentType": "WebPart",
 
   // The "*" signifies that the version should be taken from the package.json
@@ -15,14 +15,13 @@
 
   "preconfiguredEntries": [{
     "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Other
-    "group": { "default": "GRC" },
-    "title": { "default": "GRC Test" },
-    "description": { "default": "GRC Test description" },
+    "group": { "default": "Other" },
+    "title": { "default": "MitigatingControlsSiteSetup" },
+    "description": { "default": "MitigatingControlsSiteSetup description" },
     "officeFabricIconFontName": "Page",
     "properties": {
-      "primaryApproverListName":"Primary Approver",
-      "roleToTCodeReviewListName": "Role Review",
-      "roleToTransactionListName":"Role To Transaction",
+      "primaryApproversListName": "Primary Approver List",
+      "mitigatingControlsListName":"High Risk with Mitigating Controls"
     }
   }]
 }
