--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@microsoft/sp-lodash-subset": "~1.4.1",
     "@microsoft/sp-office-ui-fabric-core": "~1.4.1",
     "@microsoft/sp-webpart-base": "~1.4.1",
+    "@pnp/spfx-property-controls": "^1.4.1",
     "@types/csv-parse": "^1.1.11",
     "@types/react": "15.6.6",
     "@types/react-dom": "15.5.6",
