business role review

--- a/src/webparts/businessRoleReview/BusinessRoleReviewWebPart.manifest.json
+++ b/src/webparts/businessRoleReview/BusinessRoleReviewWebPart.manifest.json
@@ -15,12 +15,12 @@
 
   "preconfiguredEntries": [{
     "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Other
-    "group": { "default": "Other" },
+    "group": { "default": "GRC User Webparts" },
     "title": { "default": "businessRoleReview" },
     "description": { "default": "businessRoleReview description" },
     "officeFabricIconFontName": "Page",
     "properties": {
-      "description": "businessRoleReview"
-    }
+      "primaryApproversListName": "Primary Approver List",
+      "businessRoleReviewListName": "Business Role Owners"    }
   }]
 }
