--- a/src/webparts/businessRoleReview/BusinessRoleReviewWebPart.manifest.json
+++ b/src/webparts/businessRoleReview/BusinessRoleReviewWebPart.manifest.json
@@ -3,24 +3,36 @@
   "id": "cac695a6-969c-48da-968b-f76624f816a7",
   "alias": "BusinessRoleReviewWebPart",
   "componentType": "WebPart",
-
   // The "*" signifies that the version should be taken from the package.json
   "version": "*",
   "manifestVersion": 2,
-
   // If true, the component can only be installed on sites where Custom Script is allowed.
   // Components that allow authors to embed arbitrary script code should set this to true.
   // https://support.office.com/en-us/article/Turn-scripting-capabilities-on-or-off-1f2c515f-5d7e-448a-9fd7-835da935584f
   "requiresCustomScript": false,
-
-  "preconfiguredEntries": [{
-    "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Other
-    "group": { "default": "GRC User Webparts" },
-    "title": { "default": "businessRoleReview" },
-    "description": { "default": "businessRoleReview description" },
-    "officeFabricIconFontName": "Page",
-    "properties": {
-      "primaryApproversListName": "Primary Approver List",
-      "businessRoleReviewListName": "Business Role Owners"    }
-  }]
+  "preconfiguredEntries": [
+    {
+      "groupId": "5c03119e-3074-46fd-976b-c60198311f70", // Other
+      "group": {
+        "default": "GRC User Webparts"
+      },
+      "title": {
+        "default": "businessRoleReview"
+      },
+      "description": {
+        "default": "businessRoleReview description"
+      },
+      "officeFabricIconFontName": "Page",
+      "properties": {
+        "primaryApproversListName": "Primary Approver List",
+        "businessRoleReviewListName": "Business Role Owners",
+        "roleNameWidth": 400,
+ 
+        "approverWidth": 110,
+        "altApproverWidth": 110,
+        "approvalDecisionWidth": 170,
+        "commentsWidth": 180
+      }
+    }
+  ]
 }
