--- a/package.json
+++ b/package.json
@@ -15,10 +15,15 @@
     "@microsoft/sp-lodash-subset": "~1.4.1",
     "@microsoft/sp-office-ui-fabric-core": "~1.4.1",
     "@microsoft/sp-webpart-base": "~1.4.1",
+    "@pnp/common": "^1.0.4",
+    "@pnp/logging": "^1.0.4",
+    "@pnp/odata": "^1.0.4",
+    "@pnp/sp": "^1.0.4",
     "@pnp/spfx-property-controls": "^1.4.1",
     "@types/csv-parse": "^1.1.11",
     "@types/react": "15.6.6",
     "@types/react-dom": "15.5.6",
+    "@types/sharepoint": "^2016.1.0",
     "@types/webpack-env": ">=1.12.1 <1.14.0",
     "csv-parse": "^2.0.0",
     "lodash": "^4.17.4",
