--- a/src/webparts/userAccess/UserAccessWebPart.manifest.json
+++ b/src/webparts/userAccess/UserAccessWebPart.manifest.json
@@ -23,6 +23,10 @@
       "primaryApproversListName":"Primary Approver List",
       "highRiskListName": "User Access Review",
       "roleToTransactionListName":"Role To TCode",
+      "webApiUrl":"https://grcuseraccessreview.azurewebsites.net",
+      "roleToTcodeController":"Role_to_TCode",
+      "primaryApproverController":"Primary_Approver_List",
+      "highRiskFunctionsController":"C35_High_Risk_Functions_Period"
     }
   }]
 }
