--- a/package.json
+++ b/package.json
@@ -11,10 +11,10 @@
     "test": "gulp test"
   },
   "dependencies": {
-    "@microsoft/sp-core-library": "~1.4.1",
-    "@microsoft/sp-lodash-subset": "~1.4.1",
-    "@microsoft/sp-office-ui-fabric-core": "~1.4.1",
-    "@microsoft/sp-webpart-base": "~1.4.1",
+    "@microsoft/sp-core-library": "1.6.0",
+    "@microsoft/sp-lodash-subset": "1.6.0",
+    "@microsoft/sp-office-ui-fabric-core": "1.6.0",
+    "@microsoft/sp-webpart-base": "1.6.0",
     "@pnp/common": "^1.0.5",
     "@pnp/logging": "^1.0.5",
     "@pnp/odata": "^1.0.5",
@@ -24,7 +24,7 @@
     "@types/react": "15.6.6",
     "@types/react-dom": "15.5.6",
     "@types/sharepoint": "^2016.1.0",
-    "@types/webpack-env": ">=1.12.1 <1.14.0",
+    "@types/webpack-env": "1.13.1",
     "csv-parse": "^2.0.0",
     "lodash": "^4.17.4",
     "office-ui-fabric-react": "^5.113.1",
@@ -32,12 +32,13 @@
     "react-dom": "15.6.2"
   },
   "devDependencies": {
-    "@microsoft/sp-build-web": "~1.4.1",
-    "@microsoft/sp-module-interfaces": "~1.4.1",
-    "@microsoft/sp-webpart-workbench": "~1.4.1",
+    "@microsoft/sp-build-web": "1.6.0",
+    "@microsoft/sp-module-interfaces": "1.6.0",
+    "@microsoft/sp-webpart-workbench": "1.6.0",
+    "@types/chai": "3.4.34",
+    "@types/mocha": "2.2.38",
+    "ajv": "~5.2.2",
     "gulp": "~3.9.1",
-    "@types/chai": ">=3.4.34 <3.6.0",
-    "@types/mocha": ">=2.2.33 <2.6.0",
-    "ajv": "~5.2.2"
+    "tslint-microsoft-contrib": "5.0.0"
   }
 }
