--- a/src/webparts/grcTest/GrcTestWebPart.manifest.json
+++ b/src/webparts/grcTest/GrcTestWebPart.manifest.json
@@ -1,5 +1,5 @@
 {
-  "$schema": "https://dev.office.com/json-schemas/spfx/client-side-web-part-manifest.schema.json",
+  "$schema": "https://developer.microsoft.com/json-schemas/spfx/client-side-web-part-manifest.schema.json"
   "id": "22420ac0-d811-4aad-bc3a-e3cbe7a7ee1a",
   "alias": "GrcTestWebPart",
   "componentType": "WebPart",
