--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -1,6 +1,10 @@
 {
   "@microsoft/generator-sharepoint": {
-    "version": "1.4.0",
+    "version": "1.7.0",
+    "isDomainIsolated": false,
+    "isCreatingSolution": true,
+    "componentType": "webpart",
+    "packageManager": "npm",
     "libraryName": "grc",
     "libraryId": "a0b11b2a-cf8e-4f1e-ba69-fdb114739570",
     "environment": "spo"
