--- a/.yo-rc.json
+++ b/.yo-rc.json
@@ -2,11 +2,11 @@
   "@microsoft/generator-sharepoint": {
     "version": "1.7.0",
     "isDomainIsolated": false,
-    "isCreatingSolution": true,
-    "componentType": "webpart",
+    "isCreatingSolution": false,
     "packageManager": "npm",
     "libraryName": "grc",
     "libraryId": "a0b11b2a-cf8e-4f1e-ba69-fdb114739570",
-    "environment": "spo"
+    "environment": "spo",
+    "componentType": "webpart"
   }
 }
