--- a/config/config.json
+++ b/config/config.json
@@ -1,8 +1,7 @@
 {
   "$schema": "https://developer.microsoft.com/json-schemas/spfx-build/config.2.0.schema.json",
-   "version": "2.0",
+  "version": "2.0",
   "bundles": {
-   
     "mitigating-controls-web-part": {
       "components": [
         {
@@ -19,7 +18,6 @@
         }
       ]
     },
-   
     "user-access-web-part": {
       "components": [
         {
@@ -28,12 +26,19 @@
         }
       ]
     },
-  
     "role-to-t-code-web-part": {
       "components": [
         {
           "entrypoint": "./lib/webparts/roleToTCode/RoleToTCodeWebPart.js",
           "manifest": "./src/webparts/roleToTCode/RoleToTCodeWebPart.manifest.json"
+        }
+      ]
+    },
+    "high-risk-functions-web-part": {
+      "components": [
+        {
+          "entrypoint": "./lib/webparts/highRiskFunctions/HighRiskFunctionsWebPart.js",
+          "manifest": "./src/webparts/highRiskFunctions/HighRiskFunctionsWebPart.manifest.json"
         }
       ]
     }
@@ -73,11 +78,12 @@
     }
   },
   "localizedResources": {
-  "GrcAzureManagementWebPartStrings": "lib/webparts/grcAzureManagement/loc/{locale}.js",
+    "GrcAzureManagementWebPartStrings": "lib/webparts/grcAzureManagement/loc/{locale}.js",
     "MitigatingControlsWebPartStrings": "lib/webparts/mitigatingControls/loc/{locale}.js",
     "PropertyControlStrings": "./node_modules/@pnp/spfx-property-controls/lib/loc/{locale}.js",
     "BusinessRoleReviewWebPartStrings": "lib/webparts/businessRoleReview/loc/{locale}.js",
     "UserAccessWebPartStrings": "lib/webparts/userAccess/loc/{locale}.js",
-   "RoleToTCodeWebPartStrings": "lib/webparts/roleToTCode/loc/{locale}.js"
+    "RoleToTCodeWebPartStrings": "lib/webparts/roleToTCode/loc/{locale}.js",
+    "HighRiskFunctionsWebPartStrings": "lib/webparts/highRiskFunctions/loc/{locale}.js"
   }
 }
