--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "@types/mocha": "2.2.38",
     "ajv": "~5.2.2",
     "gulp": "~3.9.1",
-    "tslint-microsoft-contrib": "5.0.0"
+    "tslint-microsoft-contrib": "5.0.0",
+    "@microsoft/sp-tslint-rules": "1.7.0"
   }
 }
