user access review working

--- a/src/webparts/roleToTCode/RoleToTCodeWebPart.manifest.json
+++ b/src/webparts/roleToTCode/RoleToTCodeWebPart.manifest.json
@@ -50,7 +50,8 @@
         "roleReviewsPath": "EPXRoleReviews",
         "primaryApproversPath": "EPXPrimaryApprovers",
         "roleToTransactionsPath": "EPXRoleToTransactions",
-        "enableUncomplete":false
+        "enableUncomplete":false,
+        "system":"EPA"
       }
     }
   ]
