--- a/src/webparts/userAccess/UserAccessWebPart.manifest.json
+++ b/src/webparts/userAccess/UserAccessWebPart.manifest.json
@@ -20,10 +20,12 @@
     "description": { "default": "This webpart is placed on the homepage of a User Access review site so that users can conduct the review" },
     "officeFabricIconFontName": "Page",
     "properties": {
-      "webApiUrl":"https://grcuseraccessreview.azurewebsites.net",
-      "roleToTcodeController":"Role_to_TCode",
-      "primaryApproverController":"Primary_Approver_List",
-      "userAccessController":"C35_High_Risk_Functions_Period"
+      "azureFunctionUrl": "https://grcuseraccessreviewfunctionsrgove.azurewebsites.net",
+      "accessCode": "qWvGg8ENZZ8KHPc6DOwOzm0Lghu70eRtUFsbCzN6Xn4vDxOLlZcBfA==",
+      "userAccessReviewPath": "UserAccessReview",
+      "primaryApproversPath": "PrimaryApprovers",
+      "roleToTransactionsPath": "RoleToTransactions",
+      "enableUncomplete":false
     }
   }]
 }
